--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "Extract metadata and article body content from a given URL.",
   "main": "index.js",
   "author": "Brian Donohue",
-  "license": "ISC",
+  "license": "MIT",
   "private": true,
   "dependencies": {
-    "lodash": "^3.9.3",
-    "restler": "^3.3.0"
+    "lodash": "^3.10.1",
+    "q": "^1.4.1",
+    "superagent": "^1.8.1"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.2.45"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rundexter/instaparser"
   }
 }
